investigation:uncertainty of syn win

--- a/main.tex
+++ b/main.tex
@@ -545,6 +545,16 @@ name=$t_\mathit{w\_start}$,
 description={Start of the synchronization window, calculated by B2B source SCU},
 sort=symbollambda, type=B2B_sym_slist
 }
+\newglossaryentry{symb:win_start_rect}{
+name=$t_\mathit{w\_start\_rect}$,
+description={Rectified start of the synchronization window, calculated by B2B source SCU},
+sort=symbollambda, type=B2B_sym_slist
+}
+\newglossaryentry{symb:probable_win_start}{
+name=$\delta t_\mathit{w\_start\_rect}$,
+description={Uncertainty of the start of the synchronization window, calculated by B2B source SCU},
+sort=symbollambda, type=B2B_sym_slist
+}
 \newglossaryentry{symb:G}{
 name=$G$,
 description={Bunch gap},
